Fix work tile height alignment

--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,6 @@ header .close-modal {
 .works-wrapper {
   display: grid;
   grid-gap: 20px 20px;
-  align-items: center;
 }
 
 .work-tile {
